--- a/MauiApp1/MainPage.xaml
+++ b/MauiApp1/MainPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MauiApp1.MainPage">
+             x:Class="MauiApp1.MainPage"
+             Title="Søg i liste">
 
     <ScrollView>
         <VerticalStackLayout
@@ -24,14 +25,19 @@
                 SemanticProperties.HeadingLevel="Level3"
                 SemanticProperties.Description="Fritidsjobs" />
 
-            <Button
-                x:Name="CounterBtn"
-                Text="Dont click" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
+            <SearchBar Placeholder="Søg her..."
+                       TextChanged="OnSearchTextChanged"
+                       x:Name="SearchBarControl" />
 
-            <Button Text="Click Me" Command="{Binding MyCommand}" />
+            <CollectionView x:Name="FilteredCollectionView" ItemsSource="{Binding FilteredItems}">
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <Frame BorderColor="Gray" CornerRadius="5" Padding="10" Margin="5">
+                            <Label Text="{Binding}" FontSize="18" />
+                        </Frame>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
 
         </VerticalStackLayout>
     </ScrollView>
