--- a/MauiApp1/AppShell.xaml
+++ b/MauiApp1/AppShell.xaml
@@ -5,10 +5,14 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:MauiApp1"
     Shell.FlyoutBehavior="Flyout"
-    Title="MauiApp1">
+    Title="MauiApp1"
+    Shell.BackgroundColor="{DynamicResource NavBarBackground}"
+    Shell.ForegroundColor="{DynamicResource NavBarForeground}"
+    Shell.TabBarBackgroundColor="{DynamicResource NavBarBackground}"
+    Shell.TabBarForegroundColor="{DynamicResource NavBarForeground}">
 
     <ShellContent
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
-
+    
 </Shell>
