--- a/MauiApp1/AppShell.xaml
+++ b/MauiApp1/AppShell.xaml
@@ -11,8 +11,18 @@
     Shell.TabBarBackgroundColor="{DynamicResource NavBarBackground}"
     Shell.TabBarForegroundColor="{DynamicResource NavBarForeground}">
 
+    <!-- Main Page -->
     <ShellContent
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
-    
+
+    <!-- Add ToolbarItem for theme toggle -->
+    <Shell.ToolbarItems>
+        <ToolbarItem 
+            IconImageSource="sun_moon.png"
+            Priority="0" 
+            Order="Primary" 
+            Clicked="OnToggleThemeButtonClicked" />
+    </Shell.ToolbarItems>
 </Shell>
+    
