--- a/MauiApp1/MainPage.xaml
+++ b/MauiApp1/MainPage.xaml
@@ -29,15 +29,21 @@
                        TextColor="{DynamicResource Text}" />
 
             <!-- CollectionView viser filtrerede jobs -->
-            <CollectionView x:Name="FilteredCollectionView" ItemsSource="{Binding FilteredItems}">
+            <CollectionView x:Name="FilteredCollectionView"
+                ItemsSource="{Binding FilteredItems}"
+                SelectionMode="Single"
+                SelectionChanged="OnJobSelected">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
                         <Frame BorderColor="{DynamicResource FrameBorderColor}" 
-                               BackgroundColor="{DynamicResource FrameBackgroundColor}"
-                               CornerRadius="5" 
-                               Padding="10" 
-                               Margin="8">
-                            <Label Text="{Binding}" FontSize="18" TextColor="{DynamicResource Text}" />
+                   BackgroundColor="{DynamicResource FrameBackgroundColor}"
+                   CornerRadius="5"
+                   Padding="10"
+                   Margin="8"
+                   HasShadow="False">
+                            <StackLayout InputTransparent="True">
+                                <Label Text="{Binding JobTitle}" FontSize="18" TextColor="{DynamicResource Text}" />
+                            </StackLayout>
                         </Frame>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
