--- a/MauiApp1/MainPage.xaml
+++ b/MauiApp1/MainPage.xaml
@@ -42,6 +42,7 @@
                    Margin="8"
                    HasShadow="False">
                             <StackLayout InputTransparent="True">
+                                <Label Text="{Binding CompanyName}" FontSize="15" TextColor="{DynamicResource Text}" />
                                 <Label Text="{Binding JobTitle}" FontSize="18" TextColor="{DynamicResource Text}" />
                             </StackLayout>
                         </Frame>
