--- a/MauiApp1/JobDetailsPage.xaml
+++ b/MauiApp1/JobDetailsPage.xaml
@@ -34,6 +34,15 @@
             <Label Text="{Binding Resume}" 
                    FontSize="18" 
                    TextColor="{DynamicResource Text}" />
+			
+			<Label Text="Sted:" 
+                   FontAttributes="Bold" 
+                   FontSize="20" 
+                   Margin="0,50,0,0" 
+                   TextColor="{DynamicResource Text}" />
+            <Label Text="{Binding Geography}" 
+                   FontSize="18" 
+                   TextColor="{DynamicResource Text}" />
         </VerticalStackLayout>
     </ScrollView>
 </ContentPage>
