Revert "Background color fix"
This reverts commit ae8ab274ce4b4264c7b88dab922c364e6b743ed0.

--- a/MauiApp1/AppShell.xaml
+++ b/MauiApp1/AppShell.xaml
@@ -6,8 +6,10 @@
     xmlns:local="clr-namespace:MauiApp1"
     Shell.FlyoutBehavior="Flyout"
     Title="Unge DK"
-    Shell.BackgroundColor="{DynamicResource Background}"
-    Shell.TabBarBackgroundColor="{DynamicResource Background}">
+    Shell.BackgroundColor="{DynamicResource NavBarBackground}"
+    Shell.ForegroundColor="{DynamicResource NavBarForeground}"
+    Shell.TabBarBackgroundColor="{DynamicResource NavBarBackground}"
+    Shell.TabBarForegroundColor="{DynamicResource NavBarForeground}">
 
     <!-- Main Page -->
     <ShellContent
