--- a/MauiApp1/Resources/Styles/Colors.xaml
+++ b/MauiApp1/Resources/Styles/Colors.xaml
@@ -18,6 +18,15 @@
     <Color x:Key="MidnightBlue">#190649</Color>
     <Color x:Key="OffBlack">#1f1f1f</Color>
 
+    <Color x:Key="Gray100">#E1E1E1</Color>
+    <Color x:Key="Gray200">#C8C8C8</Color>
+    <Color x:Key="Gray300">#ACACAC</Color>
+    <Color x:Key="Gray400">#919191</Color>
+    <Color x:Key="Gray500">#6E6E6E</Color>
+    <Color x:Key="Gray600">#404040</Color>
+    <Color x:Key="Gray900">#212121</Color>
+    <Color x:Key="Gray950">#141414</Color>
+
     <!-- Light Theme Colors -->
     <Color x:Key="BackgroundLight">#FFFFFF</Color>
     <Color x:Key="TextLight">#000000</Color>
@@ -25,6 +34,12 @@
     <!-- Dark Theme Colors -->
     <Color x:Key="BackgroundDark">#1f1f1f</Color>
     <Color x:Key="TextDark">#FFFFFF</Color>
+
+    <!-- Colors for Navigation Bars -->
+    <Color x:Key="NavBarBackgroundLight">#FFFFFF</Color>
+    <Color x:Key="NavBarForegroundLight">#000000</Color>
+    <Color x:Key="NavBarBackgroundDark">#1f1f1f</Color>
+    <Color x:Key="NavBarForegroundDark">#FFFFFF</Color>
 
     <!-- Colors for Jobs -->
     <Color x:Key="FrameBorderColorLight">#000000</Color>
