Mainpage bedre Styling

--- a/MauiApp1/JobDetailsPage.xaml
+++ b/MauiApp1/JobDetailsPage.xaml
@@ -34,6 +34,16 @@
             <Label Text="{Binding Resume}" 
                FontSize="18" 
                TextColor="{DynamicResource Text}" />
+
+            <Label Text="Lokation:" 
+                   FontAttributes="Bold" 
+                   FontSize="20" 
+                   Margin="0,50,0,0" 
+                   TextColor="{DynamicResource Text}" />
+            <Label Text="{Binding GeographyDisplay}" 
+                   FontSize="18" 
+                   TextColor="{DynamicResource Text}" />
+
             <Button Text="Gå til ansøgning"
                 BackgroundColor="#ffbc2c"
                 TextColor="White"
