Favoriter oprettet, funktion virker ikke helt

--- a/MauiApp1/JobDetailsPage.xaml
+++ b/MauiApp1/JobDetailsPage.xaml
@@ -106,6 +106,11 @@
                 FontAttributes="Bold"
                 Margin="0,20,0,0"
                 Clicked="OnOpenApplicationUrlClicked" />
+
+            <!-- Favorite Button -->
+            <Button Text="⭐ Add to Favorites"
+                    Clicked="AddToFavorites"
+                    CommandParameter="{Binding .}" />
         </VerticalStackLayout>
     </ScrollView>
 </ContentPage>
