--- a/MauiApp1/MainPage.xaml
+++ b/MauiApp1/MainPage.xaml
@@ -26,6 +26,9 @@
                        TextChanged="OnSearchTextChanged"
                        x:Name="SearchBarControl"
                        TextColor="{DynamicResource Text}" />
+            
+            <Button Text="View Favorites"
+                    Command="{Binding NavigateToFavoritesCommand}" />
 
             <CollectionView x:Name="FilteredCollectionView"
                 ItemsSource="{Binding FilteredItems}"
@@ -34,14 +37,19 @@
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
                         <Frame BorderColor="{DynamicResource FrameBorderColor}" 
-                   BackgroundColor="{DynamicResource FrameBackgroundColor}"
-                   CornerRadius="5"
-                   Padding="10"
-                   Margin="8"
-                   HasShadow="False">
-                            <StackLayout InputTransparent="True">
-                                <Label Text="{Binding JobTitle}" FontSize="18" Margin="8" FontAttributes="Bold" TextColor="{DynamicResource Text}" />
-                                <Label Text="{Binding CompanyAndGeography}" FontSize="17" Margin="8" TextColor="{DynamicResource Text}" />
+                               BackgroundColor="{DynamicResource FrameBackgroundColor}"
+                               CornerRadius="5"
+                               Padding="10"
+                               Margin="8"
+                               HasShadow="False">
+                            <StackLayout>
+                                <Label Text="{Binding JobTitle}" 
+                                       FontSize="18" 
+                                       FontAttributes="Bold" 
+                                       TextColor="{DynamicResource Text}" />
+                                <Label Text="{Binding CompanyAndGeography}" 
+                                       FontSize="14" 
+                                       TextColor="{DynamicResource Text}" />
                             </StackLayout>
                         </Frame>
                     </DataTemplate>
