--- a/MauiApp1/MainPage.xaml
+++ b/MauiApp1/MainPage.xaml
@@ -29,6 +29,9 @@
                TextColor="{DynamicResource Text}" />
             </Frame>
 
+            <Button Text="View Favorites"
+                    Command="{Binding NavigateToFavoritesCommand}" />
+
             <VerticalStackLayout Spacing="5">
                 <Label Text="Områder:" 
                 FontSize="16" 
