--- a/MauiApp1/JobDetailsPage.xaml
+++ b/MauiApp1/JobDetailsPage.xaml
@@ -106,7 +106,8 @@
                 FontAttributes="Bold"
                 Margin="0,20,0,0"
                 Clicked="OnOpenApplicationUrlClicked" />
-
+            
+            <!-- Favorite Button -->
             <Button Text="⭐ Add to Favorites"
                     Clicked="AddToFavorites"
                     CommandParameter="{Binding .}" />
