--- a/MauiApp1/MainPage.xaml
+++ b/MauiApp1/MainPage.xaml
@@ -29,9 +29,6 @@
                TextColor="{DynamicResource Text}" />
             </Frame>
 
-            <Button Text="View Favorites"
-                    Command="{Binding NavigateToFavoritesCommand}" />
-
             <VerticalStackLayout Spacing="5">
                 <Label Text="Områder:" 
                 FontSize="16" 
@@ -39,7 +36,7 @@
                 TextColor="{DynamicResource Text}" 
                 HorizontalOptions="Start" />
 
-            <Frame BorderColor="{DynamicResource FrameBorderColor}" 
+                <Frame BorderColor="{DynamicResource FrameBorderColor}" 
                 BackgroundColor="{DynamicResource FrameBackgroundColor}" 
                 CornerRadius="5" 
                 Padding="0" 
@@ -49,8 +46,11 @@
                 ItemsSource="{Binding RegionOptions}"
                 SelectedIndexChanged="OnRegionFilterChanged"
                 TextColor="{DynamicResource Text}" />
-            </Frame>
+                </Frame>
             </VerticalStackLayout>
+
+            <Button Text="View Favorites" Clicked="OnViewFavoritesClicked" />
+
 
 
             <CollectionView x:Name="FilteredCollectionView"
