Favourit navibar fixed

--- a/MauiApp1/AppShell.xaml
+++ b/MauiApp1/AppShell.xaml
@@ -25,5 +25,5 @@
     <MenuItem
         Text="View Favorites"
         IconImageSource="heart.png"
-        Clicked="OnToggleThemeButtonClicked" />
+        Clicked="OnViewFavoritesClicked" />
 </Shell>
