Kan klikke på jobet i favorit listen

--- a/MauiApp1/AppShell.xaml
+++ b/MauiApp1/AppShell.xaml
@@ -23,7 +23,7 @@
         Clicked="OnToggleThemeButtonClicked" />
 
     <MenuItem
-        Text="View Favorites"
+        Text="Vis Favoriter"
         IconImageSource="heart.png"
         Clicked="OnViewFavoritesClicked" />
 </Shell>
