html content til webview på jobdetails

--- a/MauiApp1/JobDetailsPage.xaml
+++ b/MauiApp1/JobDetailsPage.xaml
@@ -88,15 +88,17 @@
                     </StackLayout>
                 </Frame>
             </Grid>
-            
+
             <Label Text="Om stillingen:" 
-               FontAttributes="Bold" 
-               FontSize="20" 
-               Margin="0,50,0,0" 
-               TextColor="{DynamicResource Text}" />
-            <Label Text="{Binding Resume}" 
-               FontSize="18" 
-               TextColor="{DynamicResource Text}" />
+       FontAttributes="Bold" 
+       FontSize="20" 
+       Margin="0,50,0,0" 
+       TextColor="{DynamicResource Text}" />
+
+            <WebView x:Name="ContentWebView"
+         HeightRequest="500" />
+
+
 
             <Button Text="Ansøg"
                 ImageSource="pencil.png"
